[tool.poetry]
name = "grokking-algorithms"
version = "0.1.0"
description = ""
authors = ["Omar Ali AbdelSalam <excalibur1987@gmail.com>"]
readme = "README.md"
packages = [{include = "grokking_algorithms"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
